--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <B></B>
   <section id="home" class="align-items-center justify-content-center">
     <div class="overflow-hidden" data-aos="fade-up">
-      <div class="d-flex h-2/4 sm:h-72 overflow-hidden shadow-lg">
+      <div class="flex h-2/4 sm:h-72 overflow-hidden shadow-lg">
       <img class="object-cover w-full"
           src="assets/img/slide2.png"/>
       </div>
