--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <div class="container flex justify-start px-5 -mt-12 mb-8 sm:mx-0"> <!-- mt & mb-(mengatur bagian ke atas div) sm:mx-(mengatur bagian kiri div)-->
         <span clspanss="container block relative h-40 w-40">
-          <img src="assets/img/img1.jpg" class="mx-auto object-cover rounded-full w-52 bg-white p-1 shadow-md" />
+          <img src="assets/img/img1.jpg" class="container mx-auto object-cover rounded-full w-52 bg-white p-1 shadow-md" />
         </span>
 
 <!------------ Tulisan Pinggir ------------------->
