--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#product" class="get-started-btn scrollto">Get Started</a>
+      <a href="#product" class="get-started-btn scrollto">Get Shopping</a>
 
     </div>
   </header><!-- End Header -->
