--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                 <h4>Otomotif</h4>
                 <p>Rak Depan Jepit Honda C70</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/product/Rak Depan Jepit Honda C70.jpg" data-gallery="portfolioGallery" class="Rak Depan Jepit Honda C70"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/product/Rak Depan Jepit Honda C70.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Rak Depan Jepit Honda C70"><i class="bx bx-plus"></i></a>
                   <a href="https://www.facebook.com/marketplace/item/2413131772162798" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -428,7 +428,7 @@
                 <h4>Otomotif</h4>
                 <p>Spion Honda C70 Second</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/product/Spion Honda C70.jpg" data-gallery="portfolioGallery" class="Spion Honda C70 Second"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/product/Spion Honda C70.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Spion Honda C70 Second"><i class="bx bx-plus"></i></a>
                   <a href="https://www.facebook.com/marketplace/item/466189631697417" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -442,7 +442,7 @@
                 <h4>Otomotif</h4>
                 <p>Spion Honda Standar Second</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/product/Spion Honda Standar.jpg" data-gallery="portfolioGallery" class="Spion Honda Standar Second"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/product/Spion Honda Standar.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Spion Honda Standar Second"><i class="bx bx-plus"></i></a>
                   <a href="https://www.facebook.com/marketplace/item/466189631697417" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
