--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 <h4>Jasa</h4>
                 <p>Jasa duplikat akses rfid 125khz & 13.56mhz</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/product/Jasa duplikat akses rfid 125khz & 13.56mhz.jpg" data-gallery="portfolioGallery" class="Jasa duplikat akses rfid 125khz & 13.56mhz"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/product/Jasa duplikat akses rfid 125khz & 13.56mhz.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Jasa duplikat akses rfid 125khz & 13.56mhz"><i class="bx bx-plus"></i></a>
                   <a href="https://www.facebook.com/marketplace/item/599251971704668" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
