--- a/index.html
+++ b/index.html
@@ -407,21 +407,19 @@
             </div>
           </div>
 
-         <!-- 
-<div class="col-lg-4 col-md-6 portfolio-item filter-elektronik">
+     <div class="col-lg-4 col-md-6 portfolio-item filter-otomotif">
             <div class="portfolio-wrap">
-              <img src="assets/img/product/Laptop HP 430 - Ram 4 HDD 512 GB Win7 Core i3 - Second.jpg" class="img-fluid" alt="">
+              <img src="assets/img/product/Paket Batok Lampu Depan C70 + Speedometer LED/1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Elektronik</h4>
-                <p>Laptop HP 430 - Ram 4 HDD 512 GB Win7 Core i3 - Second</p>
+                <p>Paket Batok Lampu Depan C70 + Speedometer LED - Baru</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/product/Laptop HP 430 - Ram 4 HDD 512 GB Win7 Core i3 - Second.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Laptop HP 430 - Ram 4 HDD 512 GB Win7 Core i3 - Second"><i class="bx bx-plus"></i></a>
-                  <a href="https://shopee.co.id/product/95793504/20922713624" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/product/Paket Batok Lampu Depan C70 + Speedometer LED/1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Paket Batok Lampu Depan C70 + Speedometer LED"><i class="bx bx-plus"></i></a>
+                  <a href="https://shopee.co.id/product/95793504/19179467394" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
--->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-otomotif">
             <div class="portfolio-wrap">
