--- a/index.html
+++ b/index.html
@@ -482,9 +482,9 @@
               <img src="assets/img/product/Lampu Sein Motor Custom Universal.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Otomotif</h4>
-                <p>Lampu Sein Motor Custom Universal</p>
+                <p>Lampu Sein Motor Custom Universal - 4 Item</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/product/Lampu Sein Motor Custom Universal.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Lampu Sein Motor Custom Universal"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/product/Lampu Sein Motor Custom Universal.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Lampu Sein Motor Custom Universal - 2 Pasang"><i class="bx bx-plus"></i></a>
                   <a href="https://www.facebook.com/marketplace/item/3386070748376799" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -512,7 +512,7 @@
                 <h4>Otomotif</h4>
                 <p>Pangkong Jok Motor C70 - Langsing</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/product/pangkong jok motor c70 - langsing.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="angkong Jok Motor C70 - Langsing"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/product/pangkong jok motor c70 - langsing.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pangkong Jok Motor C70 - Langsing"><i class="bx bx-plus"></i></a>
                   <a href="https://shopee.co.id/product/95793504/23541834156" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
